--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6 {
  color: #f1f1f1;
  font-size: 2.3rem;
  font-family: "Staatliches", sans-serif;
- transform: translate(150px);
+ transform: translateY(150);
  transition: all .5s ease-in-out;
  background-color: rgba(234, 0, 39, 0.07) ;
 }
