--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,3 +37,19 @@ h1, h2, h3, h4, h5, h6 {
 .bottom-trash-active {
   background-color: rgba(234, 0, 39, 1);
 }
+
+.btn-add{
+ background-color: #FA8BFF;
+ background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
+ transition: all .5s ease-out ;
+ background-size: 1px 100px;
+ background-position: 0px -10px ;
+}
+
+.btn-save{
+  background-color: #FA8BFF;
+  background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
+  transition: all .5s ease-out ;
+  background-size: 1px 100px;
+  background-position: 0px -10px ;
+}
