--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,24 @@ h1, h2, h3, h4, h5, h6 {
   background-size: 1px 100px;
   background-position: 0px -10px ;
 }
+
+.btn-close{
+  background-color: #EA0028;
+  background-image: linear-gradient(180deg, #FF9A8B 0%, #EA0028 100%);
+  transition: all .5s ease-out;
+  background-size: 1px 100px;
+  background-position:0 -10px;
+}
+
+.btn-delete{
+  background-color: #EA0028;
+  background-image: linear-gradient(180deg, #FF9A8B 0%, #EA0028 100%);
+  transition: all .5s ease-out;
+  background-size: 1px 100px;
+  background-position:0 -10px;
+}
+
+
+.btn-add, .btn-save, .btn-close, .btn-delete:hover{
+  background-position: 1px -50px;
+}
